# streamdeck-claude

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  com.streamdeck.dashboard.plist  config-reaper.yaml  config.yaml  pyproject.toml
docs/: music-software-setup.md  reaper-setup.md  session-looper.md  virtualdj-control.md  vocal-looper.md
scripts/: ableton_control.py  activity.py  airquality.py  arcade.py  audio_trim.py  beaver_game.py  breakout_game.py  bunny_game.py  colony_game.py  control_surface.py  crypto_game.py  crypto_real_game.py  dashboard.py  deck_ui.py  dodge_game.py  drum_control.py  drum_engine.py  dungeon_game.py  empire_game.py  factory_game.py  gen_icons.py  invaders_game.py  isobar_control.py  isobar_engine.py  lights_game.py  mathseq_game.py  memory_game.py  mines_game.py  music_hub.py  nback_game.py  numgrid_game.py  pacman_game.py  pattern_game.py  pomodoro.py  quickmath_game.py  reaction_game.py  reaper_control.py  scores.py  sequence_game.py  sequencer_game.py  (+9 more)
src/: ableton.py  actions.py  config.py  daemon.py  drum_seq.py  midi_out.py  monitors.py  reaper.py  renderer.py  superduper_catalog.py
tests/: test_actions.py  test_config.py  test_daemon.py  test_drum_seq.py  test_monitors.py  test_reaper.py  test_renderer.py  test_superduper_catalog.py
