[project]
name = "streamdeck-claude"
version = "0.1.0"
description = "Stream Deck XL dashboard for Claude Code workflows"
requires-python = ">=3.12"
dependencies = [
    "streamdeck>=0.9.8",
    "Pillow>=11.0",
    "psutil>=6.0",
    "PyYAML>=6.0",
    "ccxt>=4.5.38",
]

[project.scripts]
streamdeck-claude = "src.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
